# multiline_paster

./: .gitignore  .gitmodules  .rustc_info.json  Cargo.toml  LICENSE  README.md  config.toml  logic_config.toml
src/: kbdhook.rs  loadconfig.rs  main.rs  msg_hook.rs
src/event_collector/: clipboard.rs  keyboard.rs  mod.rs
src/kbdhook/: mod.rs
