[package]
edition = "2021"
name = "multiline_paster"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
clap = { version = "4.0.32", features = ["derive","cargo"] }
[dependencies.async-std]
features = ["attributes","std"]
version = "1.12.0"
[dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_DataExchange",
  "Win32_System_SystemServices",
  "Win32_System_Memory",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices",
]
version = "0.43.0"
